--- a/i18n/fa_IR.po
+++ b/i18n/fa_IR.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 18.0+e-20250101\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-05-24 10:05+0000\n"
-"PO-Revision-Date: 2025-05-24 10:05+0000\n"
+"POT-Creation-Date: 2025-05-24 18:02+0000\n"
+"PO-Revision-Date: 2025-05-24 18:02+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -41,14 +41,9 @@ msgid "Activity Type Icon"
 msgstr ""
 
 #. module: darman_booking_simple
-#: model:ir.model.fields.selection,name:darman_booking_simple.selection__darman_booking__age_range__adult
-msgid "Adult (12+ years)"
-msgstr "بزرگسال (۱۲+ سال)"
-
-#. module: darman_booking_simple
-#: model:ir.model.fields,field_description:darman_booking_simple.field_darman_booking__age_range
-msgid "Age Range"
-msgstr "رده سنی"
+#: model:ir.model.fields,field_description:darman_booking_simple.field_darman_booking__adult_count
+msgid "Adults (12+ years)"
+msgstr "بزرگسال (12 سال و بالاتر)"
 
 #. module: darman_booking_simple
 #: model:ir.model.fields,field_description:darman_booking_simple.field_darman_booking__message_attachment_count
@@ -83,9 +78,9 @@ msgid "Cancelled"
 msgstr ""
 
 #. module: darman_booking_simple
-#: model:ir.model.fields.selection,name:darman_booking_simple.selection__darman_booking__age_range__child
-msgid "Child (2-11 years)"
-msgstr "کودک (۲-۱۱ سال)"
+#: model:ir.model.fields,field_description:darman_booking_simple.field_darman_booking__child_count
+msgid "Children (2-11 years)"
+msgstr "کودک (بین 2 تا 11 سال)"
 
 #. module: darman_booking_simple
 #: model:ir.model.fields.selection,name:darman_booking_simple.selection__darman_booking__state__confirmed
@@ -149,6 +144,11 @@ msgid "Font awesome icon e.g. fa-tasks"
 msgstr ""
 
 #. module: darman_booking_simple
+#: model_terms:ir.ui.view,arch_db:darman_booking_simple.view_darman_booking_form
+msgid "Guest Information"
+msgstr ""
+
+#. module: darman_booking_simple
 #: model:ir.model.fields,field_description:darman_booking_simple.field_darman_booking__has_message
 msgid "Has Message"
 msgstr ""
@@ -180,9 +180,9 @@ msgid "If checked, some messages have a delivery error."
 msgstr ""
 
 #. module: darman_booking_simple
-#: model:ir.model.fields.selection,name:darman_booking_simple.selection__darman_booking__age_range__infant
-msgid "Infant (0-2 years)"
-msgstr "نوزاد (۰-۲ سال)"
+#: model:ir.model.fields,field_description:darman_booking_simple.field_darman_booking__infant_count
+msgid "Infants (0-2 years)"
+msgstr "نوزاد (زیر 2 سال)"
 
 #. module: darman_booking_simple
 #: model:ir.model.fields,field_description:darman_booking_simple.field_darman_booking__message_is_follower
@@ -245,13 +245,23 @@ msgid "Number of Actions"
 msgstr ""
 
 #. module: darman_booking_simple
-#: model:ir.model.fields,field_description:darman_booking_simple.field_darman_booking__number_of_people
-msgid "Number of People"
-msgstr "تعداد نفرات"
+#: model:ir.model.fields,help:darman_booking_simple.field_darman_booking__adult_count
+msgid "Number of adults (12 years and older)"
+msgstr ""
+
+#. module: darman_booking_simple
+#: model:ir.model.fields,help:darman_booking_simple.field_darman_booking__child_count
+msgid "Number of children (between 2 and 11 years)"
+msgstr ""
 
 #. module: darman_booking_simple
 #: model:ir.model.fields,field_description:darman_booking_simple.field_darman_booking__message_has_error_counter
 msgid "Number of errors"
+msgstr ""
+
+#. module: darman_booking_simple
+#: model:ir.model.fields,help:darman_booking_simple.field_darman_booking__infant_count
+msgid "Number of infants (under 2 years)"
 msgstr ""
 
 #. module: darman_booking_simple
@@ -290,11 +300,6 @@ msgid "SMS Delivery error"
 msgstr ""
 
 #. module: darman_booking_simple
-#: model:ir.model.fields,help:darman_booking_simple.field_darman_booking__age_range
-msgid "Select the age range for pricing and bed arrangements"
-msgstr "رده سنی را برای قیمت‌گذاری و ترتیب تخت‌ها انتخاب کنید"
-
-#. module: darman_booking_simple
 #: model:ir.model.fields,field_description:darman_booking_simple.field_darman_booking__start_date
 msgid "Start Date"
 msgstr "تاریخ رفت"
@@ -314,9 +319,14 @@ msgid ""
 msgstr ""
 
 #. module: darman_booking_simple
-#: model:ir.model.fields,help:darman_booking_simple.field_darman_booking__number_of_people
-msgid "Total number of guests for this booking"
-msgstr "تعداد کل مهمانان برای این رزرو"
+#: model:ir.model.fields,field_description:darman_booking_simple.field_darman_booking__total_guests
+msgid "Total Guests"
+msgstr "تعداد مهمانان"
+
+#. module: darman_booking_simple
+#: model:ir.model.fields,help:darman_booking_simple.field_darman_booking__total_guests
+msgid "Total number of guests"
+msgstr ""
 
 #. module: darman_booking_simple
 #: model:ir.model.fields,help:darman_booking_simple.field_darman_booking__activity_exception_decoration
@@ -354,3 +364,51 @@ msgstr ""
 #: model:ir.model.fields.selection,name:darman_booking_simple.selection__res_partner__partner_type__pasargad_financial
 msgid "گروه مالی بانک پاسارگاد"
 msgstr ""
+
+#. module: darman_booking_simple
+#. odoo-javascript
+#: code:addons/darman_booking_simple/static/src/js/website_simple_booking_editor.js:0
+msgid "Full Name"
+msgstr "نام"
+
+#. module: darman_booking_simple
+#. odoo-javascript
+#: code:addons/darman_booking_simple/static/src/js/website_simple_booking_editor.js:0
+msgid "Mobile Number"
+msgstr "شماره موبایل"
+
+#. module: darman_booking_simple
+#. odoo-javascript
+#: code:addons/darman_booking_simple/static/src/js/website_simple_booking_editor.js:0
+msgid "Start Date"
+msgstr "تاریخ رفت"
+
+#. module: darman_booking_simple
+#. odoo-javascript
+#: code:addons/darman_booking_simple/static/src/js/website_simple_booking_editor.js:0
+msgid "End Date"
+msgstr "تاریخ برگشت"
+
+#. module: darman_booking_simple
+#. odoo-javascript
+#: code:addons/darman_booking_simple/static/src/js/website_simple_booking_editor.js:0
+msgid "Adults (12+ years)"
+msgstr "بزرگسال (۱۲+ سال)"
+
+#. module: darman_booking_simple
+#. odoo-javascript
+#: code:addons/darman_booking_simple/static/src/js/website_simple_booking_editor.js:0
+msgid "Children (2-11 years)"
+msgstr "کودک (۲-۱۱ سال)"
+
+#. module: darman_booking_simple
+#. odoo-javascript
+#: code:addons/darman_booking_simple/static/src/js/website_simple_booking_editor.js:0
+msgid "Infants (0-2 years)"
+msgstr "نوزاد (۰-۲ سال)"
+
+#. module: darman_booking_simple
+#. odoo-javascript
+#: code:addons/darman_booking_simple/static/src/js/website_simple_booking_editor.js:0
+msgid "Description"
+msgstr "توضیحات"
